bynkc/tests/fixtures/negative/477_or_pattern_is_binding_mismatch/input.bynk
commons demo

type BookingState =
  | Held(guest: String, room: Int, days: Int, rsv: Int, note: String)
  | Confirmed(who: String, room: Int, days: Int, rsv: Int, note: String)

fn f(s: BookingState) -> Bool {
  s is (Held(g, r, _, _, _) | Confirmed(_, r, _, rsv, _))
}
